--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,10 +13,10 @@
       <style>
         .logo {
           top: 10px;
-          left: 15px;
+          left: 20px;
           position: fixed;
           z-index: 1;
-          max-width: 80px;
+          max-width: 70px;
         }
         
         .vertical-menu  {
@@ -25,7 +25,7 @@
           bottom: 0;
           width: 110px;
           background-color: #f8f9fa;
-          padding-top: 100px;
+          padding-top: 90px;
         }
 
         .vertical-menu a {
@@ -52,17 +52,36 @@
       </div>
       <div class="vertical-menu">
         <a href="{{ url_for('index') }}">Home</a>
-        <a href="{{ url_for('search_page') }}">Search</a>
-        <a href="{{ url_for('accout') }}">Account</a>
+        {% if not current_user.is_anonymous%}
+          <a href="{{ url_for('account') }}">Account</a>
+        {% endif %}
+        {% if current_user.username == 'root' %}
+          <a href=" {{ url_for('admin') }}">{{ current_user.username }}</a>
+        {% endif %}
         <div class="bottom-selects">
-          <a href="{{ url_for('login') }}">Sign In</a>
-          <a href="{{ url_for('register') }}">Sign Up</a>
+          {% if current_user.is_anonymous %}
+            <a href="{{ url_for('register') }}">Sing up</a>
+            <a href="{{ url_for('login') }}">Sing in</a>
+          {% else %}
+            <a href="{{ url_for('logout') }}">Log out</a>
+          {% endif %}
         </div>
       </div>
     </div>
   </div>
 
   <div class="col-auto", style="margin-left: 110px;">
+    <div class="container">
+      {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+              {% for category,message in messages %}
+                  <div class="alert alert-{{ category }}", style="text-align: center;">
+                      {{ message }}
+                  </div>
+              {% endfor %}
+          {% endif %}
+      {% endwith %}
+    </div>
     {% block app_content %}{% endblock %}
   </div>
 </body>
