--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% block style %}
 <style>
-    .container { 
+    .payload {
         text-align: center;
     }
 </style>
 {% endblock %}      
 {% block app_content %}
-    <div class="container">
+    <div class="payload">
         <h1>This is the home page content</h1>
     </div>
 {% endblock %}
