--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block style %}
 <style>
-    .form { 
+    .login { 
         text-align: center;
     }
 </style>
 {% endblock %}
 {% block app_content%}
 <div class="login">
-    <h1>Sign in</h1>
+    <h1>Log in</h1>
     <form action="", method="post", class="form">
         {{ form.hidden_tag() }}
         <p>
