add admin panel and status for users

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,6 +50,12 @@
     #page_body { 
       width: 100%;
     }
+
+    .alert {
+      width: 90%;
+      margin: auto;
+    }
+    
   </style>
   {% block style %}{% endblock %}
 </head>
