redesign admin panel

--- a/app/templates/root.html
+++ b/app/templates/root.html
@@ -7,8 +7,8 @@
        padding-bottom: 15px;
     }
     .menu a {
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 130px;
+        padding-right: 130px;
         color: black;
     }
     table {
@@ -31,8 +31,6 @@
     <h1 style="text-align: center;">Admin Panel</h1>
     <div class="menu">
         <a href="?action=list_users">List of Users</a>
-        <a href="?action=delete_users">Delete Users</a>
-        <a href="?action=change_status">Change status</a>
         <a href="?action=delete_db_submit">Delete all database</a>
     </div>
     {% if route == 'list_users' %}
@@ -42,36 +40,36 @@
                 <th>Username</th>
                 <th>Status</th>
                 <th>Role</th>
+                <th>Delete</th>
+                <th>Update Status</th>
             </tr>
             {% for user in users %}
                 <tr>
-                    <td>{{user.id }}</td>
+                    <td>{{ user.id }}</td>
                     <td>{{ user.username }}</td>
                     <td>{{ user.status }}</td>
                     <td>{{ user.role }}</td>
+                    <td>
+                        <form style="text-align: center">
+                            <input type="hidden" name="username" value="{{ user.username}}"/>
+                            <input type="submit" name="action" value="delete"/>
+                        </form>
+                    </td>
+                    <td>
+                        <form style="text-align: center">
+                            <input type="hidden" name="username" value="{{ user.username }}"/>
+                            <input type="submit" name="status" value="ACTIVE"/>
+                            <input type="submit" name="status" value="DEACTIVATED"/>
+                            <input type="submit" name="status" value="BANNED"/>
+                        </form>
+                    </td>
                 </tr>
             {% endfor %}
         </table>
-    <div class="del_add">
-        {% elif route == 'delete_users' %}
-            <form style="text-align: center">
-                <label for="del_user">Enter username to delete:</label><br>
-                <input type="text" id="del_user" name="del_user"><br>
-                <input type="submit" value="Send Request" style="margin-top: 10px"/>
-            </form>
-        {% elif route == 'change_status' %}
-        <form style="text-align: center">
-            <label for="change_status">Enter username to change status:</label><br>
-            <input type="text" id="change_status" name="change_status" style="margin-bottom: 10px;"><br>
-            <button type="submit" name="status" value="ACTIVE">ACTIVE</button>
-            <button type="submit" name="status" value="DEACTIVATED">DEACTIVATED</button>
-            <button type="submit" name="status" value="BANNED">BANNED</button>
-        </form>
-        {% elif route == 'delete_db_submit' %}
+    {% elif route == 'delete_db_submit' %}
         <form action="/admin?action=delete_db" method="post" style="text-align: center;">
             <p>Are you sure?</p>
             <input type="submit" value="Delete Database" />
         </form>
-        {% endif %}
-    </div>
+    {% endif %}
 {% endblock %}
