--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -9,23 +9,32 @@
 {% block app_content %}
 <div class="register"> 
     <h1>Sign up</h1>
-    <form action="" method="post", class="form">
+    <form method="post">
         {{ form.hidden_tag() }}
-        <p>
+        <div>
             {{ form.username.label }}
-            {{ form.username(size=32, class_="form-control", style="width:20%; margin: auto") }}
-        </p>
-        <p>
+            {{ form.username(size=32, class="form-control", style="width:20%; margin: auto") }}
+            {% for error in form.username.errors %}
+                <span style="color: red;">{{ error }}</span><br>
+            {% endfor %}
+        </div>
+        <div>
             {{ form.password.label }}
-            {{ form.password(size=32, class_="form-control", style="width:20%; margin: auto;") }}
-        </p>
-        <p>
+            {{ form.password(size=32, class="form-control", style="width:20%; margin: auto;") }}
+            {% for error in form.password.errors %}
+                <span style="color: red;">{{ error }}</span><br>
+            {% endfor %}
+        </div>
+        <div>
             {{ form.password2.label }}
-            {{ form.password2(size=32, class_="form-control", style="width:20%; margin: auto;") }}
-        </p>
-        <p>
-            {{ form.submit(class_="btn btn-secondary", style="background-color: #808080; color:white")}}
-        </p>
+            {{ form.password2(size=32, class="form-control", style="width:20%; margin: auto;") }}
+            {% for error in form.password2.errors %}
+                <span style="color: red;">{{ error }}</span><br>
+            {% endfor %}
+        </div>
+        <div>
+            {{ form.submit(class="btn btn-secondary", style="background-color: #808080; color:white; margin-top: 10px")}}
+        </div>
     </form>
 </div>
 {% endblock %}
