--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,42 +13,38 @@
   <style>
     #page_layout {
       display: flex;
-      height: 100%;
     }
 
-    #side_bar {
-      width: 100px;
+    nav#side_bar {
       height: 100vh;
+      width: 100px;
       display: flex;
       flex-flow: column;
       background-color: #f8f9fa;
+      position: fixed;
     }
 
     .logo {
       display: flex;
       justify-content: center;
       height: 60px;
-      margin-top: 5px;
+      margin: 5px 0 10px 0;
     }
 
-    #vertical_menu a, #bottom-selects a {
-      display: flex;
-      justify-content: center;
-      color: black;
-      padding: 4px;
+    nav ul { 
+      list-style: none;
+      padding: 0;
+      text-align: center;
     }
 
-    #vertical_menu { 
-      padding-top: 15px;
+    footer#bottom_links {
+      margin: auto 0 5px 0;
     }
 
-    #bottom-selects {
-      margin-top: auto;
-      padding-bottom: 10px;
-    }
-
-    #page_body { 
+    aside#page_body { 
+      margin-left: 100px;
       width: 100%;
+      height: 100%;
     }
 
     .alert {
@@ -61,28 +57,35 @@
 </head>
 <body>
   <div id="page_layout">
-    <div id="side_bar">
-      <div class="logo">
+    <nav id="side_bar">
+      <header class="logo">
         <img src="{{ url_for('static', filename='favicon.ico') }}", class="logo">
-      </div>
-      <div id="vertical_menu">
-        <a href="{{ url_for('index') }}">Home</a>
-        {% if not current_user.is_anonymous %}
-          <a href="{{ url_for('account') }}">Account</a>
-        {% endif %}
-        {% if current_user.role == "ROOT" %}
-          <a href="{{ url_for('admin') }}">Admin</a>
-        {% endif %}      </div>
-      <div id="bottom-selects">
-        {% if current_user.is_anonymous %}
-          <a href="{{ url_for('register') }}">Sign up</a>
-          <a href="{{ url_for('login') }}">Log in</a>
-        {% else %}
-          <a href="{{ url_for('logout') }}">Log out</a>
-        {% endif %}
-      </div>
-    </div>
-    <div id="page_body">
+      </header>
+      <nav id="vertical_menu">
+        <ul>
+          <li><a href="{{ url_for('index') }}" class="btn">Home</a></li>
+          <!-- <li><a></a>Search</li> -->
+          {% if not current_user.is_anonymous %}
+            <li><a href="{{ url_for('account') }}" class="btn">Account</a></li>
+            <li><a href="{{ url_for('makepost') }}" class="btn">Post</a></li>
+          {% endif %}
+          {% if current_user.role == "ROOT" %}
+            <li><a href="{{ url_for('admin') }}" class="btn">Admin</a></li>
+          {% endif %}      
+        </ul>
+      </nav>
+      <footer id="bottom_links">
+        <ul>
+          {% if current_user.is_anonymous %}
+            <li><a href="{{ url_for('register') }}" class="btn">Sign up</a></li>
+            <li><a href="{{ url_for('login') }}" class="btn">Log in</a></li>
+          {% else %}
+            <li><a href="{{ url_for('logout') }}" class="btn">Log out</a></li>
+          {% endif %}
+        </ul>
+      </footer>
+    </nav>
+    <aside id="page_body">
         {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
             {% for category, message in messages %}
@@ -93,7 +96,7 @@
           {% endif %}
         {% endwith %}
         {% block app_content %}{% endblock %}
-      </div>
+    </aside>
   </div>
 </body>
 </html>
