--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,50 +8,52 @@
   {% else %}
     <title>Welcome Page</title>
   {% endif %}
+  <script src="{{ url_for('static', filename='dropdown.js') }}"></script>
+  <script src="{{ url_for('static', filename='modal.js') }}"></script>
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
     #page_layout {
       display: flex;
+      font-family: BlinkMacSystemFont;
     }
 
     nav#side_bar {
-      height: 100vh;
-      width: 100px;
-      display: flex;
-      flex-flow: column;
-      background-color: #f8f9fa;
-      position: fixed;
+        height: 100vh;
+        width: 100px;
+        display: flex;
+        flex-flow: column;
+        background-color: #f8f9fa;
+        position: fixed;
     }
 
     .logo {
-      display: flex;
-      justify-content: center;
-      height: 60px;
-      margin: 5px 0 10px 0;
+        display: flex;
+        justify-content: center;
+        height: 60px;
+        margin: 5px 0 10px 0;
     }
 
     nav ul { 
-      list-style: none;
-      padding: 0;
-      text-align: center;
+        list-style: none;
+        padding: 0;
+        text-align: center;
     }
 
     footer#bottom_links {
-      margin: auto 0 5px 0;
+        margin: auto 0 5px 0;
     }
 
     aside#page_body { 
-      margin-left: 100px;
-      width: 100%;
-      height: 100%;
+        margin-left: 100px;
+        width: 100%;
+        height: 100%;
     }
 
     .alert {
-      width: 90%;
-      margin: auto;
+    width: 90%;
+    margin: auto;
     }
-    
   </style>
   {% block style %}{% endblock %}
 </head>
