--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -27,6 +27,6 @@
             {{ form.submit(class_="btn btn-secondary", style="background-color: #808080; color:white")}}
         </p>
     </form>
-    <p>Новый пользователь? <a href="{{ url_for('register') }}">Нажмите для регистрации.</a></p>
+    <p>Don't have account? <a href="{{ url_for('register') }}">Sign up.</a></p>
 </div>
 {% endblock %}
